--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <meta charset="utf-8" />
+    <title>Мій перший сайт</title>
+</head>
+
+<body>
+    Привіт!
+</body>
+
+</html>
